; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_iosched.c_cam_iosched_fini.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_iosched.c_cam_iosched_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cam_iosched_softc = type { i32, i32, i32, i64, i32, i32, i32, i32 }

@ENXIO = common dso_local global i32 0, align 4
@M_CAMSCHED = common dso_local global i32 0, align 4
@CAM_IOSCHED_FLAG_CALLOUT_ACTIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cam_iosched_fini(%struct.cam_iosched_softc* %0) #0 {
  %2 = alloca %struct.cam_iosched_softc*, align 8
  store %struct.cam_iosched_softc* %0, %struct.cam_iosched_softc** %2, align 8
  %3 = load %struct.cam_iosched_softc*, %struct.cam_iosched_softc** %2, align 8
  %4 = icmp ne %struct.cam_iosched_softc* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.cam_iosched_softc*, %struct.cam_iosched_softc** %2, align 8
  %7 = load i32, i32* @ENXIO, align 4
  %8 = call i32 @cam_iosched_flush(%struct.cam_iosched_softc* %6, i32* null, i32 %7)
  %9 = load %struct.cam_iosched_softc*, %struct.cam_iosched_softc** %2, align 8
  %10 = load i32, i32* @M_CAMSCHED, align 4
  %11 = call i32 @free(%struct.cam_iosched_softc* %9, i32 %10)
  br label %12

12:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @cam_iosched_flush(%struct.cam_iosched_softc*, i32*, i32) #1

declare dso_local i32 @free(%struct.cam_iosched_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
